# data-mesh

./: .dockerignore  .gitignore  Dockerfile  README.md  directory_structure.txt  pyproject.toml  requirements.txt  test.csv
.github/workflows/: python-tests.yml
src/: TUI.py  __init__.py  average.py  config.py  consumer.py  domain.py  domain_app.csv  domain_app.py  main.py  platform_app.py  platform_server.py  producer.py  random-data-generator.py  test.py  test_domain.py  test_log.csv  test_log.txt
src/TUI/: __init__.py  domain_TUI.py  main.py
src/data/: random-data-generator.py  weather_data_1.csv  weather_data_2.csv  weather_data_3.csv  weather_data_4.csv  weather_data_5.csv
src/domain/: __init__.py  artifact.py  data_product.py  domain_TUI.py
src/domain_alpha/: __init__.py  controller.py  data_contracts.py  data_product.py
src/domain_beta/: __init__.py  controller.py  data_contracts.py  data_product.py
src/domains/: __init__.py  data_product.py  domain_client.py
src/infra/: __init__.py  governance.py  socket_manager.py
src/mesh_socket_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/platform/: __init__.py  connectivity.py  discovery.py  mesh_sdk.py  registry.py
src/platform-code/: auther.py  gateway.py  logger.py  marketplace.json
src/platform1/: __init__.py  auth.py  auther.py  gateway.py  logger.py  marketplace.json
src/platform_/: gateway.py  logger.py
src/platform_code/: __init__.py  authenticate.py  auther.py  gateway.py  lock.py  logger.py
tests/: conftest.py  test-socket-communication.py  unit-tests.py
(+3 files in other folders)
