[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh_socket_demo"
version = "0.1.0"
description = "A proof-of-concept implementation of Data Mesh architecture using sockets"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "infra"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest]
testpaths = ["tests"]